@@ -76,8 +76,7 @@ reduced ability to support styles and packages);
 %
 \index{dvips@\texttt{dvips} version}
 \item 
-\htmladdnormallink{\fn{dvips}}
-{ftp://ftp.tex.ac.uk/pub/archive/dviware/dvips}
+\fn{dvips}
 (version~5.516 or later) or \fn{dvipsk}\\
   Version 5.62 or higher enhances the performance of image creation
   with a \emph{significant} speed-up. See latex2html.config for this
@@ -95,7 +94,7 @@ reduced ability to support styles and packages);
 \index{image conversion!Postscript@\PS\ to GIF}%
 \index{GIF!image conversion}%
 \item 
-The \htmladdnormallink{\fn{netpbm}}{ftp://ftp.x.org/R5contrib/}
+The \fn{netpbm}
 library of graphics utilities; \fn{netpbm} dated 1 March 1994
 is required, else part of the image creation process will fail.\\
 Check with: \fn{pnmcrop} \Cs{version}.
